NXP-4858 - Set JBoss binding port as 0.0.0.0 by default